[package]
name = "easysocketexhaustion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
futures = "0.3.*"